# MotherFuckingProjects

./: .clang-format  .gitignore
QtApp/: CMakeLists.txt
QtApp/.cache/clangd/index/: main.cpp.3C1AE75AD3EC2756.idx  main.cpp.6976EF1924B9A967.idx
QtApp/src/: main.cpp
QtLayout/: CMakeLists.txt
QtLayout/src/: MainWindow.cpp  MainWindow.hpp
ToDo list/src/: main.cpp
